# ms-notifications

./: .gitignore  1_test_texto_plano.py  2_test_html.py  3_test_lista_destinatarios.py  agente_pqrs.py  app.py  plantilla_cambio_contrasena.html  plantilla_clima.html  plantilla_codigo_verificacion.html  plantilla_registro.html  pyproject.toml  requeriments.txt  test_api_cliente.py
