[project]
name = "back-notis"
version = "0.1.0"
description = "Microservicio de notificaciones por email"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client==2.146.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "Telethon==1.40.0",
    "Flask==2.3.3",
    "requests==2.31.0",
    "colorama==0.4.6",
]

[project.scripts]
start = "app:main"
